--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -48,6 +48,155 @@
   <div class="deal_btn promo_btn"><a target="_blank" href="product_link">Use Code at Amazon</a></div>
 </div>
  -->
+
+<div class="card clearfix" data-score="40" data-price="16.79">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2O3GkMr"><img src="https://m.media-amazon.com/images/I/917Tsk8BYeL._SR400,400_.jpg" alt="StorageWorks Rectangular Basket" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2O3GkMr">StorageWorks Rectangular Basket, Foldable Canvas Baskets for Storage Cube with Rope Handles, Canvas Linen, Gray/Beige, 3-Pack</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$16.79</span><span class="ori_price">$27.99</span></address>
+      <textarea readonly="readonly" class="code_area">40X24O6S</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>40% off at $27.99</strong> with promo code: <strong class="m_codes">40X24O6S</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 30, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2O3GkMr">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="30" data-price="12.59">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/32HZLhV"><img src="https://m.media-amazon.com/images/I/71imdJa3VGL._SR400,400_.jpg" alt="Selfie Light Ring 6.3-inch" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/32HZLhV">Selfie Light Ring 6.3-inch with Stand & Phone Holder,3 Light Settings Dimmable Desk LED Camera Lights for Video,Makeup,YouTube,Live Streaming</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$12.59</span><span class="ori_price">$17.99</span>
+        <div class="tooltip_common tooltip_red"><span> + 40% Off</span><div class="content_common tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+      </address>
+      <div class="m_tooltip_common m_tooltip_red"><span> + 40% Off</span><div class="m_content_common m_tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+      <textarea readonly="readonly" class="code_area">30VB5SSG</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>30% off at $17.99</strong> with promo code: <strong class="m_codes">30VB5SSG</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 16, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/32HZLhV">Use Code at Amazon</a></div>
+</div>
+ 
+<div class="card clearfix" data-score="50" data-price="10.49">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/301lvYu"><img src="https://m.media-amazon.com/images/I/61G8DV9GtML._SR400,400_.jpg" alt="Digital Kitchen Scale Electronic Food Scale" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/301lvYu">Digital Kitchen Scale Electronic Food Scale - 19lb/10kg Multifunctional Compact Portable Kitchen Weight Scale with Stainless Steel Platform</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$10.49</span><span class="ori_price">$20.99</span></address>
+      <textarea readonly="readonly" class="code_area">50SQ5V6X</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $20.99</strong> with promo code: <strong class="m_codes">50SQ5V6X</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 17, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/301lvYu">Use Code at Amazon</a></div>
+</div>
+ 
+<div class="card clearfix" data-score="45" data-price="219.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2O2VcdW"><img src="https://m.media-amazon.com/images/I/7167aX1nrAL._SR400,400_.jpg" alt="DCOICFAN DOFAN SF Spring Mattress Queen" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>45% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2O2VcdW">DCOICFAN DOFAN SF Spring Mattress Queen Bamboo Memory Foam Charcoal Latex Gel 10-Inch</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$219.99</span><span class="ori_price">$399.99</span></address>
+      <textarea readonly="readonly" class="code_area">454NGV25</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>45% off at $399.99</strong> with promo code: <strong class="m_codes">454NGV25</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 19, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2O2VcdW">Use Code at Amazon</a></div>
+</div>
+ 
+<div class="card clearfix" data-score="50" data-price="25.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2LwMGCc"><img src="https://m.media-amazon.com/images/I/61Q8aoSxJVL._SR400,400_.jpg" alt="Retro Wooden Wireless Bluetooth Speaker" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2LwMGCc">InstaBox i10 Multi-Functional Retro Wooden Wireless Bluetooth Speaker with Handle, Portable FM Radio with Old Fashioned Classic Style,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$25.00</span><span class="ori_price">$49.99</span>
+        <div class="tooltip_common tooltip_green"><span> + $10 off Coupon</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <div class="m_tooltip_common m_tooltip_green"><span> + $10 off Coupon</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      <textarea readonly="readonly" class="code_area">509SFWK1</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $49.99</strong> with promo code: <strong class="m_codes">509SFWK1</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 30, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2LwMGCc">Use Code at Amazon</a></div>
+</div>
+ 
+<div class="card clearfix" data-score="40" data-price="11.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/301ZKIT"><img src="https://m.media-amazon.com/images/I/615H5u1CtwL._SR400,400_.jpg" alt="Auto & Safety Features Electric Pencil Sharpener" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/301ZKIT">Auto & Safety Features Electric Pencil Sharpener, Heavy-duty Helical Blade Pencil Sharpener, USB or Battery Operated for...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$11.99</span><span class="ori_price">$19.99</span>
+        <div class="tooltip_common tooltip_green"><span> + 10% off Coupon</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <div class="m_tooltip_common m_tooltip_green"><span> + 10% off Coupon</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      <textarea readonly="readonly" class="code_area">40ZYJTRG</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>40% off at $19.99</strong> with promo code: <strong class="m_codes">40ZYJTRG</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 20, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/301ZKIT">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="25.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2O3Ts44"><img src="https://m.media-amazon.com/images/I/71sxdX04qHL._SR400,400_.jpg" alt="Keenstone Travel Bag 35L waterproof" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2O3Ts44">Keenstone Travel Bag 35L waterproof with USB business bag commuter school travel business travel PC compatible (Blue)</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$25.00</span><span class="ori_price">$49.99</span></address>
+      <textarea readonly="readonly" class="code_area">50RM6MKQ</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $49.99</strong> with promo code: <strong class="m_codes">50RM6MKQ</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 17, 2019 at 07:00 AM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2O3Ts44">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="35" data-price="28.59">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2LTUo8v"><img src="https://m.media-amazon.com/images/I/71pd-Fv7RCL._SR400,400_.jpg" alt="Industrial Square Side Table" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>35% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2LTUo8v">Industrial Square Side Table, End Table with Storage Shelf & Metal Frame, Night Stand Coffee Table Furniture for Living Room & Bedroom</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$28.59</span><span class="ori_price">$43.99</span>
+        <div class="tooltip_common tooltip_green"><span> + 8% off Coupon</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <div class="m_tooltip_common m_tooltip_green"><span> + 8% off Coupon</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      <textarea readonly="readonly" class="code_area">357V6389</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>35% off at $43.99</strong> with promo code: <strong class="m_codes">357V6389</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 30, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2LTUo8v">Use Code at Amazon</a></div>
+</div>
+ 
 <div class="card clearfix" data-score="45" data-price="34.64">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2NirKRI"><img src="https://m.media-amazon.com/images/I/61H2JtXS7BL._SR400,400_.jpg" alt="Auelife Camera Bag Waterproof Multipurpose " /></a>
