--- a/app/views/deals/promo_codes.html.erb
+++ b/app/views/deals/promo_codes.html.erb
@@ -35,10 +35,10 @@
                   <li>Enter your promotional code into the box of "Gift cards & promotional codes"</li>
                   <!-- <li>Proceed with payment then the code is automatically applied.</li> -->
                   <li class="about_db_dis">
-                    <p>What the "Extra Discount" is?</p>
+                    <!-- <p>What the "Extra Discount" is?</p> -->
                     <span class="double red">Extra Discount</span>
                     <em>You can get extra discount by applying promotional code to the product that is being discounting.</em>
-                    <span class="double green">Extra Discount</span>
+                    <span class="double green">Coupon Deals</span>
                     <em>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</em>
                   </li>
                 </ul>
