--- a/app/views/guides/guide_01.html.erb
+++ b/app/views/guides/guide_01.html.erb
@@ -6,16 +6,12 @@
     <h2 class="pink">Gift for people who are CRAZY about PINK!</h2>
   </div> -->
 
-  <div class="guide_show_header" id="movie-card-list">
-    <div class="movie-card" data-section="pink">
-      <div class="movie-card__overlay pink"></div>                
-      <div class="movie-card__content">
-        <div class="movie-card__header">
-          <h1 class="movie-card__title gift_show_title">Gift for people who are CRAZY about BATMAN!</h1>
-        </div>
-      </div>
-    </div>
+  <div class="guide_show_header">
+    <a href="/guides/index">HOME / FEATURED / GIFT GUIDES</a>
+    <span>BATMAN</span>
+    <!-- <em>This is the section of this show page</em> -->
   </div>
+
 
   <div class="guide_show clearfix">
 
