--- a/app/views/guides/guide_04.html.erb
+++ b/app/views/guides/guide_04.html.erb
@@ -6,15 +6,17 @@
     <h2>Gift for people who are CRAZY about BATMAN!</h2>
   </div> -->
 
-  <div class="guide_show_header" id="movie-card-list">
-    <div class="movie-card" data-section="mickey">
-      <div class="movie-card__overlay"></div>                
-      <div class="movie-card__content">
-        <div class="movie-card__header">
-          <h1 class="movie-card__title gift_show_title">Gift for people who are CRAZY about Mickey Mouse</h1>
-        </div>
-      </div>
-    </div>
+  <div class="guide_location clearfix">
+   <ul>
+      <li><a href="/">HOME <em>/</em></a></li>
+      <li><a href="/recommends">FEATURED <em>/</em></a></li>
+      <li><a href="/guides/index">GIFT GUIDES <em>/</em></a></li>
+      <li class="last"><a href="#n">BATMAN</a></li>
+    </ul>
+  </div>
+  <div class="guide_show_header">
+    <span>BATMAN</span>
+    <!-- <em>This is the section of this show page</em> -->
   </div>
 
   <div class="guide_show clearfix">
