--- a/app/assets/stylesheets/featured.css
+++ b/app/assets/stylesheets/featured.css
@@ -234,14 +234,21 @@
 .guide_header{width:1000px;margin:120px auto 50px auto;font-family:'Montserrat', sans-serif;}
 .guide_header h2{font-size:35px;width:50%;line-height:1.3;border-top:2px solid;border-bottom:2px solid;padding:10px 0;font-weight:900;}
 .guide_header h2.pink{color:pink;}
-.guide_show_header{width:1000px;margin:70px auto 0 auto;}
+.guide_show_header{width:1000px;margin:0 auto;text-align:center;}
+.guide_show_header span{padding:80px;display:block;border-top:1px solid #ccc;border-right:1px solid #ccc;border-left:1px solid #ccc;font-size:40px;}
+.guide_location{width:1000px;margin:70px auto 0 auto;}
+.guide_location ul{}
+.guide_location ul li{float:left;margin-right:10px;}
+.guide_location ul li a{text-align:left;display:block;text-decoration:none;color:#ccc;font-size:13px;}
+.guide_location ul li.last a{color:#000;}
+.guide_location ul li a em{margin-left:10px;}
 .guide_show{font-family: 'Montserrat', sans-serif;width:1000px;margin:0 auto 100px auto;}
 .shoes_wrap{margin-top:35px;}
 .guide_show .group:before,
 .guide_show .group:after{content:'';display:block;}
 .guide_show .group:after{clear:both;}
+.guide_show .column{float:left;width:25%;transition:0.3s;border-top:1px solid #ccc;border-left:1px solid #ccc;padding:20px;}
 .guide_show .column_box .last_box{border-right:1px solid #ccc;}
-.guide_show .column{float:left;width:25%;transition:0.3s;border-top:1px solid #ccc;border-left:1px solid #ccc;padding:15px;}
 .guide_show .last_column_box .column{border-bottom:1px solid #ccc;}
 .guide_show .shoes_column{float:left;width:20%;transition:0.3s;}
 .guide_show .column:hover{box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.2), 0 2px 10px 0 rgba(0, 0, 0, 0.2);cursor:pointer;}
@@ -292,6 +299,7 @@
   .guide_header{margin:80px 0 20px 0;}
   .guide_header h2{font-size:25px;width:100%;}
   .guide_show_header{width:100%;}
+  .guide_show_header span{border-bottom:1px solid #ccc;padding:60px;}
   .guide_show{width:100%;}
   .guide_show .flex{display:block;align-items:center;justify-content:center;}
   .guide_show .column_box .last_box, .guide_show .last_column_box .column{border:none;}
@@ -466,49 +474,4 @@
   .most_wrapper{margin-top:-25px;}
 }
 /* End Promotion */
-
-
-.movie-card {background-size: contain;background-repeat: no-repeat;width: 100%;height: 100%;min-height: 300px;display: block;margin-bottom:30px;border-radius: 8px;/*box-shadow: 0px 8px 12px 0px rgba(0, 0, 0, 0.25);*/position: relative;}
-@media screen and (max-width: 800px) {
-  .movie-card {width: 100%;max-width: 100%;min-height:240px;}
-}
-@media screen and (max-width: 600px) {
-  .movie-card {background-position: 50% 0%;background-size: cover;height: 400px;}
-}
-.movie-card[data-section="deals"]{background-image:url(https://images.unsplash.com/photo-1561132680-1c6abcf10a81?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60);}
-.movie-card[data-section="pink"]{background-image:url(https://images.unsplash.com/photo-1490367605959-06955305859b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60);}
-.movie-card[data-section="batman"]{background-image:url(https://images.unsplash.com/photo-1497124401559-3e75ec2ed794?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60);}
-.movie-card[data-section="marvel"]{background-image:url(https://upload.wikimedia.org/wikipedia/commons/0/04/MarvelLogo.svg);}
-.movie-card__overlay{width: 100%;height: 100%;border-radius: 8px;background:linear-gradient(to right, rgba(42, 159, 255, 0.2) 0%, #212120 45%, #212120 100%);background-blend-mode: multiply;position: absolute;top: 0;bottom: 0;right: 0;left: 0;}
-.pink{background:linear-gradient(to right, rgba(300, 159, 255, 0.2) 0%, #ffc1cb 45%, #ffc1cb 100%);}
-@media screen and (max-width: 600px) {
-  .movie-card__overlay {background:linear-gradient(to bottom, rgba(42, 159, 255, 0.2) 0%, #212120 60%, #212120 100%);}
-  .pink{background:linear-gradient(to bottom, rgba(300, 159, 255, 0.2) 0%, #ffc1cb 45%, #ffc1cb 100%);}
-}
-.movie-card__content {width: 100%;max-width:430px;display: flex;align-items: flex-start;flex-direction: column;position: relative;float: right;padding:15px 20px 20px 0;}
-.movie-card__content a{text-decoration:none;color:#fff;font-size:17px;display:block;margin:10px 0;}
-@media screen and (max-width: 1000px) {
-  .movie-card__content {width: 50%;}
-}
-@media screen and (max-width: 600px) {
-  .movie-card__content {margin-top: 1em;width: 100%;float: inherit;max-width: 100%;padding: 0 1em 1em;}
-}
-.movie-card__header{margin-bottom: 0;}
-.movie-card__title{color:#fff;margin-top:30px;font-size:35px;text-decoration:underline;}
-.movie-card__info{text-transform:uppercase;letter-spacing:2px;font-size:13px;color:#2a9fff;line-height:1;margin:0;font-weight:700;margin-top:-10px;}
-.movie-card__desc {font-weight: 300;color:#fff;}
-.movie-card__content .btn{padding: .5rem 2rem;/*background-color: rgba(255, 255, 255, 0.4);*/color: white;}
-.btn-outline{background-color: transparent;border: 3px solid #ffffff;}
-.btn-outline:hover {border-color: #2a9fff;color: #2a9fff;box-shadow: 0px 1px 8px 0px rgba(245, 199, 0, 0.2);}
-@media screen and (max-width:640px){
-  .movie-card__title{font-size:40px;margin:175px 0 5px 0;}
-  .movie-card__content a{font-size:15px;margin:5px;}
-  .movie-card[data-movie="Blade Runner"]{margin-bottom:60px;}
-}
-@media screen and (min-width:641px) and (max-width:1199px){
-  .movie-card__title{font-size:30px;margin-top:50px;}
-  .movie-card__content a{font-size:15px;margin:3px 0;}
-  .movie-card__info{font-size:10px;margin-top:-3px;}
-  .movie-card__content .btn{padding:3px 10px;}
-}
 
