--- a/app/assets/stylesheets/featured.css
+++ b/app/assets/stylesheets/featured.css
@@ -102,11 +102,13 @@
 /* End Featured Main Page */
 
 /* Begin Featured Detail Page */
-.cu_wrap{/*float:left;width:70%;*/margin-top:300px;font-family: 'Montserrat', sans-serif;}
-.cu_wrap .detitle{margin:0 0 100px 100px;color:#000;width:70%;}
+.cu_wrap{margin-top:80px;font-family: 'Montserrat', sans-serif;}
+.cu_wrap .detitle{}
 .cu_wrap .detitle h2{font-size:30px;display:inline;border-bottom:0.4em solid rgba(0,168,225,0.2);position:relative;}
 .cu_wrap .detitle h2 span{position:relative;top:0.4em;}
 .cu_wrap .detitle p{color:#616161;margin:10px auto;}
+.cu_wrap .detitle .tit_int{text-align:center;padding:60px;border:1px solid #ccc;}
+.cu_wrap .detitle .tit_int h2{}
 .cu_wrap .detitle .post_date{display:block;margin-top:10px;}
 .cu_wrap .detitle .post_date em{margin-left:10px;}
 .cu_wrap .detitle .trial{}
@@ -143,7 +145,8 @@
   .cu_wrap .detitle{margin:0 0 30px 0;color:#000;width:100%;}
   .cu_wrap .detitle h2{font-size:20px;}
   .cu_wrap .detitle p{width:100%;}
-  .cu_wrap .cu_box{margin-bottom:30px;padding-bottom:30px;}
+  .cu_wrap .detitle .tit_int{padding:25px;}
+  .cu_wrap .cu_box{margin:0;padding-bottom:30px;}
   .cu_wrap .num{display:none;}
   .cu_wrap .pic{float:none;width:100%;margin-right:0;}
   .cu_wrap .pic>a>img{width:100%;}
@@ -160,10 +163,11 @@
 }
 
 @media screen and (min-width:641px) and (max-width:1199px){
-  .cu_wrap{margin-top:150px;}
+  .cu_wrap{margin-top:75px;}
   .cu_wrap .detitle{margin:0 0 50px 0;text-align:center;width:100%;}
   .cu_wrap .detitle h2{font-size:25px;}
   .cu_wrap .detitle p{width:70%;}
+  .cu_wrap .detitle .tit_int{padding:30px;}
   .cu_wrap .cu_box{margin-bottom:50px;}
   .cu_wrap .num{width:10%;}
   .cu_wrap .num>p{font-size:50px;}
@@ -177,8 +181,8 @@
   .cu_wrap .inner>.btn{margin:10px 0;}
   .cu_wrap .inner>.btn>em,
   .cu_wrap .inner>.btn>a{float:left;font-size:17px;line-height:20px;}
-
   .show_more_ctn{float:left;width:31.33%;margin:0 1% 30px 1%;}
+  .show_more_ctn h3{font-size:13px;}
   .show_more_ctn img{width:100%;height:170px;object-fit:cover;}
 }
 /* End Featured Detail Page */
@@ -237,6 +241,7 @@
 .guide_show_header{width:1000px;margin:0 auto;text-align:center;}
 .guide_show_header span{padding:80px;display:block;border-top:1px solid #ccc;border-right:1px solid #ccc;border-left:1px solid #ccc;font-size:40px;}
 .guide_location{width:1000px;margin:70px auto 0 auto;}
+.recommend_location{width:1200px;}
 .guide_location ul{}
 .guide_location ul li{float:left;margin-right:10px;}
 .guide_location ul li a{text-align:left;display:block;text-decoration:none;color:#ccc;font-size:13px;}
@@ -417,7 +422,7 @@
 .promotions .featured .sm_mobile .guide_controll button{float:none;width:100%;text-align:left;font-size:40px;}
 .promotions .guide_controll{background:#000;}
 .promotions .guide_controll .btn{font-size:19px;margin:0 0.5%;color:#fff;}
-.promotions .guide_controll .form-control{margin:10px 0;width:335px;padding:5px;line-height:25px;}
+.promotions .guide_controll .form-control{margin:10px 0;width:335px;padding:5px;line-height:25px;margin-left:45px;}
 .promotions .guide_controll p{font-size:40px;color:#fff;}
 .promotions .promotion_box{float:left;width:31.3333%;height:450px;margin:0 1% 2% 1%;border:1px solid;position:relative;}
 .promotions .promotion_box .image_box{}
