--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -20,8 +20,8 @@
  <div class="tooltip_common tooltip_red"><span> + Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
  <div class="m_tooltip_common m_tooltip_red"><span> + Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
 
- <div class="tooltip_common tooltip_green"><span> + Cou_Per% Coupon</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
- <div class="m_tooltip_common m_tooltip_green"><span> + Cou_Per% Coupon</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
+ <div class="tooltip_common tooltip_green"><span> + Cou_Per% off Coupon</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
+ <div class="m_tooltip_common m_tooltip_green"><span> + Cou_Per% off Coupon</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
 
  <div class="js-overlay-start start dealtube" data-url= "Youtube_URL">
   <button><img src="<%=asset_path 'youtube_02.png' %>" alt="Play Youtube" /></button>
@@ -49,6 +49,97 @@
 </div>
  -->
 
+<div class="card clearfix" data-score="30" data-price="41.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/31wpA4n"><img src="https://m.media-amazon.com/images/I/61VrxgHxqpL._SR400,400_.jpg" alt="Amagoing 4 Person Tents" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/31wpA4n">Amagoing 4 Person Tents for Camping with Instant Setup Double Layer Waterproof for 4 Seasons</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$41.99</span><span class="ori_price">$59.99</span>
+        <div class="tooltip_common tooltip_green"><span> + $9 off Coupon</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <div class="m_tooltip_common m_tooltip_green"><span> + $9 off Coupon</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      <textarea readonly="readonly" class="code_area">30JH4IKN</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>30% off at $59.99</strong> with promo code: <strong class="m_codes">30JH4IKN</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 30, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/31wpA4n">Use Code at Amazon</a></div>
+</div>
+ 
+<div class="card clearfix" data-score="45" data-price="9.34">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2OazrsD"><img src="https://m.media-amazon.com/images/I/61wv30WVDhL._SR400,400_.jpg" alt="AINOPE Cell Phone Holder for Car" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>45% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2OazrsD">AINOPE Cell Phone Holder for Car, Gravity Car Phone Mount Auto-Clamping Air Vent Car Phone Holder Universal Car Phone Mount Compatible iPhone...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$9.34</span><span class="ori_price">$16.99</span>
+        <div class="tooltip_common tooltip_green"><span> + 20% off Coupon</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <div class="m_tooltip_common m_tooltip_green"><span> + 20% off Coupon</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      <textarea readonly="readonly" class="code_area">45POMQGH</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>45% off at $16.99</strong> with promo code: <strong class="m_codes">45POMQGH</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 30, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2OazrsD">Use Code at Amazon</a></div>
+</div>
+ 
+<div class="card clearfix" data-score="80" data-price="17.80">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/30s5kPM"><img src="https://m.media-amazon.com/images/I/616Iey5qCJL._SR400,400_.jpg" alt="Bluetooth Headphones 5.0 Earbuds Earphones" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>80% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/30s5kPM">Bluetooth Headphones 5.0 Earbuds Earphones Stereo Sports Headphons Earbuds Noise Cancelling and Waterproof Headsets with...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$17.80</span><span class="ori_price">$89.00</span></address>
+      <textarea readonly="readonly" class="code_area">80TU8PLZ</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>80% off at $89.00</strong> with promo code: <strong class="m_codes">80TU8PLZ</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 20, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/30s5kPM">Use Code at Amazon</a></div>
+</div>
+ 
+<div class="card clearfix" data-score="55" data-price="31.05">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/306NnLt"><img src="https://m.media-amazon.com/images/I/71oRQOajwLL._SR400,400_.jpg" alt="20V Max Lithium-Ion 1/2 Inch Drill Driver Kit" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>55% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/306NnLt">20V Max Lithium-Ion 1/2 Inch Drill Driver Kit. Max Torque 450 in-Ibs, 2 - Speed, LED Work Light. Belt Clip. Fast Charger,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$31.05</span><span class="ori_price">$69.00</span></address>
+      <textarea readonly="readonly" class="code_area">55NC3JYU</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>55% off at $69.00</strong> with promo code: <strong class="m_codes">55NC3JYU</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 30, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/306NnLt">Use Code at Amazon</a></div>
+</div>
+ 
+<div class="card clearfix" data-score="50" data-price="18.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/3098QDu"><img src="https://m.media-amazon.com/images/I/71bl7CJU1QL._SR400,400_.jpg" alt="Bruno Marc Men's Running Sneakers" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/3098QDu">Bruno Marc Men's Running Sneakers Lightweight Breathable Walking Shoes</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$18.00</span><span class="ori_price">$35.99</span></address>
+      <textarea readonly="readonly" class="code_area">505T1VQL</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $35.99</strong> with promo code: <strong class="m_codes">505T1VQL</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 20, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/3098QDu">Use Code at Amazon</a></div>
+</div>
+ 
 <div class="card clearfix" data-score="80" data-price="4.00">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/304UJ18"><img src="https://m.media-amazon.com/images/I/71oSy45rvZL._SR400,400_.jpg" alt="Oli & Ode Lightning Compatible Cable" /></a>
