--- a/app/views/recommends/show.html.erb
+++ b/app/views/recommends/show.html.erb
@@ -19,7 +19,7 @@
        <ul>
           <li><a href="/">Home <em>/</em></a></li>
           <li><a href="/recommends">Featured <em>/</em></a></li>
-          <li><a href="/recommends">Editor's Pick <em>/</em></a></li>
+          <li><a href="/recommends">Editor's Pick </a></li>
         </ul>
       </div>
       <div class="detitle">
