--- a/app/views/guides/guide_01.html.erb
+++ b/app/views/guides/guide_01.html.erb
@@ -6,8 +6,16 @@
     <h2 class="pink">Gift for people who are CRAZY about PINK!</h2>
   </div> -->
 
+  <div class="guide_location clearfix">
+   <ul>
+      <li><a href="/">HOME <em>/</em></a></li>
+      <li><a href="/recommends">FEATURED <em>/</em></a></li>
+      <li><a href="/guides/index">GIFT GUIDES <em>/</em></a></li>
+      <li class="last"><a href="#n">BATMAN</a></li>
+    </ul>
+  </div>
+
   <div class="guide_show_header">
-    <a href="/guides/index">HOME / FEATURED / GIFT GUIDES</a>
     <span>BATMAN</span>
     <!-- <em>This is the section of this show page</em> -->
   </div>
