--- a/app/views/guides/guide_03.html.erb
+++ b/app/views/guides/guide_03.html.erb
@@ -5,9 +5,16 @@
   <!-- <div class="guide_header">
     <h2>Gift for people who are CRAZY about BATMAN!</h2>
   </div> -->
+  <div class="guide_location clearfix">
+   <ul>
+      <li><a href="/">HOME <em>/</em></a></li>
+      <li><a href="/recommends">FEATURED <em>/</em></a></li>
+      <li><a href="/guides/index">GIFT GUIDES <em>/</em></a></li>
+      <li class="last"><a href="#n">BATMAN</a></li>
+    </ul>
+  </div>
 
   <div class="guide_show_header">
-    <a href="/guides/index">All Gift Guides</a>
     <span>BATMAN</span>
     <!-- <em>This is the section of this show page</em> -->
   </div>
